tests/functional/fixtures/ext/error/class/ext.php
<?php

class phpbb_ext_error_class_ext extends phpbb_extension_base
{
	
}
